client/mysql-client/mysql-client.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mysql-client
  name: mysql-client
spec:
  containers:
    - image: mysql:5.6
      name: mysql-client
