client/mysql-client/se-mysql.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-external
spec:
  hosts:
    - httpbin-mutual-tls.jeremysolarz.app
  location: MESH_EXTERNAL
  ports:
    - number: 3306
      name: tcp
      protocol: TCP
    - number: 16443
      name: tls
      protocol: TLS
  resolution: DNS
  endpoints:
    - address: httpbin-mutual-tls.jeremysolarz.app
      ports:
        tls: 16443
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway-mysql
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      hosts:
        - httpbin-mutual-tls.jeremysolarz.app
      tls:
        mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-mysql
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: mysql
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
        portLevelSettings:
          - port:
              number: 15443
            tls:
              mode: ISTIO_MUTUAL
              sni: httpbin-mutual-tls.jeremysolarz.app
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-mysql-through-egress-gateway
spec:
  hosts:
    - httpbin-mutual-tls.jeremysolarz.app
  gateways:
    - istio-egressgateway-mysql
    - mesh
  tcp:
    - match:
        - gateways:
            - mesh
          port: 3306
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: mysql
            port:
              number: 15443
          weight: 100
    - match:
        - gateways:
            - istio-egressgateway-mysql
          port: 15443
      route:
        - destination:
            host: httpbin-mutual-tls.jeremysolarz.app
            port:
              number: 16443
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-mtls-for-mysql
spec:
  host: httpbin-mutual-tls.jeremysolarz.app
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 16443
        tls:
          mode: MUTUAL
          clientCertificate: /etc/istio/mysql-client-certs/tls.crt
          privateKey: /etc/istio/mysql-client-certs/tls.key
          caCertificates: /etc/istio/mysql-ca-certs/ca-chain.cert.pem
          sni: httpbin-mutual-tls.jeremysolarz.app
