client/mysql-client/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-external
spec:
  hosts:
    - 35.239.250.140.nip.io
  location: MESH_EXTERNAL
  ports:
    - number: 3306
      name: tcp
      protocol: TCP
    - number: 13306
      name: tls
      protocol: TLS
  resolution: DNS
  endpoints:
    - address: 35.239.250.140.nip.io
      ports:
        tls: 13306
