client/mysql-client/virtualservice-destinationrule-from-egressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-mysql-through-egress-gateway
spec:
  hosts:
    - 35.239.250.140.nip.io
  gateways:
    - istio-egressgateway-mysql
    - mesh
  tcp:
    - match:
        - gateways:
            - mesh
          port: 3306
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: mysql
            port:
              number: 15443
          weight: 100
    - match:
        - gateways:
            - istio-egressgateway-mysql
          port: 15443
      route:
        - destination:
            host: 35.239.250.140.nip.io
            port:
              number: 13306
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-mtls-for-mysql
spec:
  host: 35.239.250.140.nip.io
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 13306
        tls:
          mode: MUTUAL
          clientCertificate: /etc/istio/mysql-client-certs/tls.crt
          privateKey: /etc/istio/mysql-client-certs/tls.key
          caCertificates: /etc/istio/mysql-ca-certs/ca-chain.cert.pem
          sni: 35.239.250.140.nip.io
